[package]
name = "myyrakle_boom"
version = "0.1.0"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "test crate" #그냥 설명문
keywords = ["test", "cargo", "crate"] #검색용 키워드
edition = "2018" 
license = "MIT" #라이센스
include = ["src/*.rs", "Cargo.toml"] #업로드 대상
exclude = [] #업로드 제외
readme = "README.md" #crate 페이지의 소개문 파일
repository = "https://github.com/myyrakle/myyrakle_boom" #레포지토리
documentation = "https://github.com/myyrakle/myyrakle_boom/blob/master/README.md" #문서 사이트
homepage = "documentation" #홈페이지 사이트

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
